tests/pass/InitialisationBlocks.java
package pass;

import java.lang.System; 

public class InitialisationBlocks {


    public int x;
    public int otherInteger;

    public InitialisationBlocks(int number){
        x = number;
    }


    {
        otherInteger = 10;

    }

    public int z;




    public static void main(String[] args){

    }
}
