tests/fail/LogicalOr.java
package fail;

public class LogicalOr {
    public static void main(String[] args){
        boolean a = 10 || false;
    }
}